--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@orange-games/phaser-input": "^2.0.5",
     "cookie-parser": "~1.4.3",
+    "cryptr": "^4.0.2",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
